--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="swiggity"
+        android:label="Swiggity"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
